test/sema/typeck/pattern/struct-type-mismatch.out
error: Pattern does not match type Foo
--> struct-type-mismatch.dora:4:9
 | struct Bar(Int64, String)
 | fn f(x: Foo): Int64 {
 |     let Bar(_a, b) = x;
           ~~~~~~~~~~
 |     b
 | }
1 error found.
